<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/matches"
        android:title="@string/menu_title_matches"
        android:icon="@drawable/ic_baseline_matches_24"
        />

    <item
        android:id="@+id/news"
        android:title="@string/menu_title_news"
        android:icon="@drawable/ic_baseline_newspaper_24"
        />

    <item
        android:id="@+id/leagues"
        android:title="@string/menu_title_leagues"
        android:icon="@drawable/ic_baseline_league_24"
        />

    <item
        android:id="@+id/favorites"
        android:title="@string/menu_title_favorites"
        android:icon="@drawable/ic_baseline_star_24"
        />

    <item
        android:id="@+id/menu"
        android:title="@string/menu_title_menu"
        android:icon="@drawable/ic_baseline_menu_24"
        />
</menu>